# ihex-bin-converter

./: .gitignore  CMakeLists.txt  README.md  build.sh
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: test.yaml
cmake/: clang_toolchain.cmake  gnu.cmake
inc/: ihex.h
patterns/: test.hex  test00.hex
src/: ihex.cpp  main.cpp
test/: CMakeLists.txt  test.cpp  test.sh
